# 12-factor-agents

./: .gitignore  .gitmodules  README.md
examples/langchain/langgraph_agent/: langgraph.json  pyproject.toml
examples/langchain/langgraph_agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
examples/langchain/langgraph_agent/src/langgraph_agent/: parse.py  server.py
examples/langgraph_agent/: .cursorignore  Makefile  README.md  pyproject.toml
examples/langgraph_agent/src/langgraph_agent/: graph.py  main.py  memory.py  tools.py
examples/terminal/gilfoyle/: .eslintrc.json  .gitignore  package-lock.json  package.json
examples/terminal/gilfoyle/source/: cli.tsx
next/: package-lock.json  package.json
next/app/: page.tsx
next/baml_client/: async_client.ts  async_request.ts  inlinedbaml.ts  parser.ts  partial_types.ts  sync_client.ts  sync_request.ts  type_builder.ts  types.ts
next/baml_client/react/: hooks.tsx  server.ts  server_streaming.ts  server_streaming_types.ts
next/baml_src/: generators.baml  prompt.baml
next/components/: WriteMeAStory.tsx
python/baml_py/: .gitignore  Makefile  main.py  pyproject.toml
python/demo/: .gitignore  Makefile  README.md  pyproject.toml
python/demo/docs/: README.md
python/demo/scripts/: setup.py
python/demo/src/: __init__.py  config.py  main.py
python/demo/src/api/: __init__.py  routes.py
python/demo/src/models/: base.py  context.py
python/demo/src/modules/: __init__.py
python/demo/src/services/: __init__.py  base_service.py  llm_service.py
python/demo/src/utils/: __init__.py  agent.py  context.py  helpers.py
python/demo/tests/: __init__.py  test_config.py  test_utils.py
